# mau-ityfuzz

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  baseline.sh  build.rs  custom-b1-oracle-target.json  integration_test.py  kernel.bc  replay.sh  run-disable.sh  run.sh
b1-results/: 2018-10299.instructions.stats.csv  2018-10376.instructions.stats.csv  2018-10468.instructions.stats.csv  2018-11239.instructions.stats.csv  2018-11411.instructions.stats.csv  2018-11429.instructions.stats.csv  2018-11446.instructions.stats.csv  2018-11561.instructions.stats.csv  2018-11687.instructions.stats.csv  2018-12070.instructions.stats.csv  2018-12230.instructions.stats.csv  2018-13126.instructions.stats.csv  2018-13127.instructions.stats.csv  2018-13128.instructions.stats.csv  2018-13129.instructions.stats.csv  2018-13131.instructions.stats.csv  2018-13132.instructions.stats.csv  2018-13144.instructions.stats.csv  2018-13189.instructions.stats.csv  2018-13202.instructions.stats.csv  2018-13208.instructions.stats.csv  2018-13220.instructions.stats.csv  2018-13221.instructions.stats.csv  2018-13225.instructions.stats.csv  2018-13227.instructions.stats.csv  2018-13228.instructions.stats.csv  2018-13230.instructions.stats.csv  2018-13325.instructions.stats.csv  2018-13327.instructions.stats.csv  2018-13493.instructions.stats.csv  2018-13533.instructions.stats.csv  2018-13625.instructions.stats.csv  2018-13670.instructions.stats.csv  2018-13695.instructions.stats.csv  2018-13698.instructions.stats.csv  2018-13703.instructions.stats.csv  2018-13722.instructions.stats.csv  2018-13777.instructions.stats.csv  2018-13778.instructions.stats.csv  2018-13779.instructions.stats.csv  (+17 more)
b1-with-oracle/: 2018-10299.sol  2018-10376.sol  2018-10468.sol  2018-10706.sol  2018-11239.sol  2018-11411.sol  2018-11429.sol  2018-11446.sol  2018-11561.sol  2018-11687.sol  2018-12070.sol  2018-12230.sol  2018-13126.sol  2018-13127.sol  2018-13128.sol  2018-13129.sol  2018-13131.sol  2018-13132.sol  2018-13144.sol  2018-13189.sol  2018-13202.sol  2018-13208.sol  2018-13220.sol  2018-13221.sol  2018-13225.sol  2018-13227.sol  2018-13228.sol  2018-13230.sol  2018-13325.sol  2018-13327.sol  2018-13493.sol  2018-13533.sol  2018-13625.sol  2018-13670.sol  2018-13695.sol  2018-13698.sol  2018-13703.sol  2018-13722.sol  2018-13777.sol  2018-13778.sol  (+18 more)
b1-with-oracle/2018-10299/: BecToken.abi  BecToken.bin-runtime
b1-with-oracle/2018-10376/: SMT.abi  SMT.bin-runtime
b1-with-oracle/2018-10468/: UselessEthereumToken.abi  UselessEthereumToken.bin-runtime
b1-with-oracle/2018-10706/: Token.abi  Token.bin-runtime  TokenI.abi
b1-with-oracle/2018-11239/: Hexagon.abi  Hexagon.bin-runtime
b1-with-oracle/2018-11411/: DimonCoin.abi  DimonCoin.bin-runtime
b1-with-oracle/2018-11429/: ATL.abi  ATL.bin-runtime
b1-with-oracle/2018-11446/: GRX.abi  GRX.bin-runtime
b1-with-oracle/2018-11561/: ERC20Token.abi  ERC20Token.bin-runtime
b1-with-oracle/2018-11687/: BitcoinRed.abi  BitcoinRed.bin-runtime
b1-with-oracle/2018-12070/: SEC.abi  SEC.bin-runtime  SECToken.abi  SECToken.bin-runtime
b1-with-oracle/2018-12230/: RemiCoin.abi  RemiCoin.bin-runtime
b1-with-oracle/2018-13126/: SpendToken.abi  SpendToken.bin-runtime
b1-with-oracle/2018-13127/: DSPXToken.abi  DSPXToken.bin-runtime
b1-with-oracle/2018-13128/: ETY.abi  ETY.bin-runtime
b1-with-oracle/2018-13129/: SPXToken.abi  SPXToken.bin-runtime
b1-with-oracle/2018-13131/: DSPXToken.bin-runtime
b1-with-oracle/2018-13132/: SPXToken.bin-runtime
b1-with-oracle/2018-13144/: HumanStandardToken.abi  HumanStandardToken.bin-runtime
b1-with-oracle/2018-13189/: UNLB.abi  UNLB.bin-runtime
b1-with-oracle/2018-13202/: MyBoToken.bin-runtime
b1-with-oracle/2018-13208/: MoneyTreeToken.abi  MoneyTreeToken.bin-runtime
b1-with-oracle/2018-13220/: MAVCash.abi  MAVCash.bin-runtime
b1-with-oracle/2018-13221/: ExtremeToken.abi  ExtremeToken.bin-runtime
b1-with-oracle/2018-13225/: MyYLCToken.abi  MyYLCToken.bin-runtime
b1-with-oracle/2018-13227/: MoneyChainNetToken.bin-runtime
b1-with-oracle/2018-13228/: Crowdnext.bin-runtime
cli/: .gitignore
mau-profile-0.2/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  config.h
mau-profile-0.2/cmake/: ProjectLLVM.cmake
mau-profile-0.2/runner/: CMakeLists.txt  Makefile  cmake_install.cmake  debug.cc  debug.h  runner.cc  runner.h  type.h
mau-profile-0.2/runtime/: CMakeLists.txt  Makefile  cmake_install.cmake  keccak256.c  keccak256.h  mutate.c  mutate.h  ptx_builtins.h  random.h  rt.o.c  storage.c  storage.h
mau-profile-0.2/scripts/: get_ghostmem_size.cu
mau-profile-0.2/sema/: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
mau-profile-0.2/sema/include/: ptxsema.h
mau-profile-0.2/sema/src/: AFL.cpp  AFL.h  Arith256.cpp  Arith256.h  BasicBlock.cpp  BasicBlock.h  BuildInfo.h.in  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Common.h  CompilerHelper.h  EEIModule.cpp  EEIModule.h  Instruction.cpp  Instruction.h  Makefile  Optimizer.cpp  Optimizer.h  Sanitizers.cpp  Sanitizers.h  Type.cpp  Type.h  Utils.cpp  Utils.h  WASMCompiler.cpp  WASMCompiler.h  cmake_install.cmake  standalone.cpp
mau-profile-0.2/sema/tests/: CMakeLists.txt  eval.sh  loader.cpp  ploader.cpp  ptx.sh  smartest.py  storage  storage.c  test.hex
mau-profile-0.2/sema/tests/contracts/: OpCodes.hex  OpCodeshh.hex  Transfer.hex  arithmetic.hex  erc20.hex  hashmapping.hex  hashmapping.sol  lottery.hex  reentrance.hex  reentrance.sol  returnStruct.hex  soll.hex  storage.hex  storage.sol  string.hex  string.sol  xcall.hex  xcall.sol
mau-profile-0.2/test/: CMakeLists.txt  README.md  debug.h  runner-test.cc
mau-profile-0.2/test/cmake/: jsoncpp.cmake
mau-profile-0.2/test/complex-condition/: main.abi  test.sol  txs.json
mau-profile-0.2/test/storage/: txs.json
release/: README.md  build.sh
solidity_utils/: lib-legacy.sol  lib.sol
src/: feedback.rs  fuzzer.rs  gpu_stage.rs  input.rs  lib.rs  scheduler.rs  state.rs  telemetry.rs  tracer.rs
test-contracts/: BugSample.abi  source-BugSample.sol
(+1001 files in other folders)
